@@ -1,7 +1,6 @@
 package com.here.naksha.lib.handlers.util;
 
 import com.here.naksha.lib.core.lambdas.F1;
-import java.util.stream.Stream;
 import naksha.base.StringList;
 import naksha.model.request.RequestQuery;
 import naksha.model.request.query.*;
@@ -9,91 +8,19 @@ import org.junit.jupiter.api.Test;
 
 import java.util.List;
 import java.util.Set;
-import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.MethodSource;
 
 import static com.here.naksha.lib.handlers.util.PropertyOperationUtil.disablePQueriesInRequest;
 import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assumptions.*;
 
 class PropertyOperationUtilTest {
-    private final F1<Boolean, PQuery> dummyShouldDisable = pq -> false;
+    private final F1<Boolean, PQuery> dummyShouldDisable = _ -> false;
 
     @Test
-    void shouldReturnEmptySetWhenPropertiesAbsent() {
+    void shouldNothingBeDisabledWhenPropertiesAbsent() {
         // Given
         RequestQuery query = new RequestQuery();
-
-        // When
-        Set<PQuery> disabledPQueries = disablePQueriesInRequest(query, dummyShouldDisable);
-
-        // Then
-        assertEquals(0, disabledPQueries.size());
-        assertNull(query.getProperties());
-    }
-
-    @Test
-    void shouldReduceTrivialAnd() {
-        // Given
-        RequestQuery query = new RequestQuery();
-        IPropertyQuery propertyQuery = new PAnd(
-                PTrue.INSTANCE,
-                PTrue.INSTANCE
-        );
-        query.setProperties(propertyQuery);
-
-        // When
-        Set<PQuery> disabledPQueries = disablePQueriesInRequest(query, dummyShouldDisable);
-
-        // Then
-        assertEquals(0, disabledPQueries.size());
-        assertNull(query.getProperties());
-    }
-
-    @Test
-    void shouldReduceAlwaysFalseAnd() {
-        // Given
-        RequestQuery query = new RequestQuery();
-        IPropertyQuery propertyQuery = new PAnd(
-                PTrue.INSTANCE,
-                PFalse.INSTANCE
-        );
-        query.setProperties(propertyQuery);
-
-        // When
-        Set<PQuery> disabledPQueries = disablePQueriesInRequest(query, dummyShouldDisable);
-
-        // Then
-        assertEquals(0, disabledPQueries.size());
-        assertEquals(PFalse.INSTANCE, query.getProperties());
-    }
-
-    @Test
-    void shouldReduceTrivialOr() {
-        // Given
-        RequestQuery query = new RequestQuery();
-        IPropertyQuery propertyQuery = new POr(
-                PFalse.INSTANCE,
-                PFalse.INSTANCE
-        );
-        query.setProperties(propertyQuery);
-
-        // When
-        Set<PQuery> disabledPQueries = disablePQueriesInRequest(query, dummyShouldDisable);
-
-        // Then
-        assertEquals(0, disabledPQueries.size());
-        assertEquals(PFalse.INSTANCE, query.getProperties());
-    }
-
-    @Test
-    void shouldReduceAlwaysTrueOr() {
-        // Given
-        RequestQuery query = new RequestQuery();
-        IPropertyQuery propertyQuery = new POr(
-                PFalse.INSTANCE,
-                PTrue.INSTANCE
-        );
-        query.setProperties(propertyQuery);
+        assumeTrue(query.getProperties() == null);
 
         // When
         Set<PQuery> disabledPQueries = disablePQueriesInRequest(query, dummyShouldDisable);
@@ -124,40 +51,16 @@ class PropertyOperationUtilTest {
     }
 
     @Test
-    void shouldDisablePOrWhenAllChildrenDisabled() {
-        // Given
-        PQuery valueIs60 = new PQuery(new Property("sign", "value"), DoubleOp.EQ, 60.0);
-        PQuery valueIsCarNotAllowed = new PQuery(new Property("sign", "value"), StringOp.EQUALS, "car_not_allowed");
-        IPropertyQuery originalPropertyQuery = new POr(
-                valueIs60,
-                valueIsCarNotAllowed
-        );
-        RequestQuery query = new RequestQuery();
-        query.setProperties(originalPropertyQuery);
-
-        // When: disabling all queries related to `sign.value`
-        Set<PQuery> disabledPQueries = disablePQueriesInRequest(query, pQueryMatchesPath("sign", "value"));
-
-        // Then: disabled subqueries are about value
-        assertEquals(2, disabledPQueries.size());
-        assertTrue(disabledPQueries.containsAll(List.of(valueIs60, valueIsCarNotAllowed)));
-
-        // And: original request was correctly mutated
-        IPropertyQuery mutatedPropertyQuery = query.getProperties();
-        assertNull(mutatedPropertyQuery);
-    }
-
-    @Test
     void shouldComposedPQueryInRequest() {
         // Given: request with dummy query with POp:
-        // - query all speed limits of 60 AND "car allowed" signs
+        // - query all speed limits of 60
         // - "car allowed signs": signs with type `car_allowed` or value that is NOT `can_not_allowed`
         PQuery typeIsSpeedLimit = new PQuery(new Property("sign", "type"), StringOp.EQUALS, "speed_limit");
         PQuery valueIs60 = new PQuery(new Property("sign", "value"), DoubleOp.EQ, 60.0);
         PQuery typeIsCarAllowed = new PQuery(new Property("sign", "type"), StringOp.EQUALS, "car_allowed");
         PQuery valueIsCarNotAllowed = new PQuery(new Property("sign", "value"), StringOp.EQUALS, "car_not_allowed");
         IPropertyQuery originalPropertyQuery = new POr(
-                new PAnd(new PNot(typeIsSpeedLimit), valueIs60),
+                new PAnd(typeIsSpeedLimit, valueIs60),
                 new POr(typeIsCarAllowed, new PNot(valueIsCarNotAllowed))
         );
         RequestQuery query = new RequestQuery();
@@ -177,17 +80,48 @@ class PropertyOperationUtilTest {
         assertInstanceOf(POr.class, newPropertyQuery);
         POr root = (POr) newPropertyQuery;
         assertEquals(2, root.size());
-        // first child is PNot
-        PNot firstChild = assertInstanceOf(PNot.class, root.get(0));
-        // second child is typeIsCarAllowed
-        assertEquals(typeIsCarAllowed, root.get(1));
-        // and typeIsSpeedLimit in firstChild
-        assertNotNull(firstChild);
-        assertEquals(typeIsSpeedLimit, firstChild.getQuery());
+        // first child is AND with 1 child node
+        PAnd andUnderRoot = assertInstanceOf(PAnd.class, root.getFirst());
+        assertEquals(1, andUnderRoot.size());
+        assertEquals(typeIsSpeedLimit, andUnderRoot.getFirst());
+        // second child is OR with 1 child node
+        POr orUnderRoot = assertInstanceOf(POr.class, root.get(1));
+        assertEquals(1, orUnderRoot.size());
+        assertEquals(typeIsCarAllowed, orUnderRoot.getFirst());
     }
 
     @Test
-    void shouldDisableSimpleOr() {
+    void shouldNotRemoveEmptyAnd() {
+        // Given
+        PAnd root = new PAnd();
+        RequestQuery query = new RequestQuery();
+        query.setProperties(root);
+
+        // When
+        disablePQueriesInRequest(query, dummyShouldDisable);
+
+        // Then
+        IPropertyQuery propertyQuery = query.getProperties();
+        assertInstanceOf(PAnd.class, propertyQuery);
+    }
+
+    @Test
+    void shouldNotRemoveEmptyOr() {
+        // Given
+        POr root = new POr();
+        RequestQuery query = new RequestQuery();
+        query.setProperties(root);
+
+        // When
+        disablePQueriesInRequest(query, dummyShouldDisable);
+
+        // Then
+        IPropertyQuery propertyQuery = query.getProperties();
+        assertInstanceOf(POr.class, propertyQuery);
+    }
+
+    @Test
+    void shouldRemoveOrWhenInnerQueriesDisabled() {
         // Given
         POr root = new POr();
         root.add(new PQuery(new Property("foo", "bar"), StringOp.EQUALS, "a"));
@@ -196,14 +130,14 @@ class PropertyOperationUtilTest {
         query.setProperties(root);
 
         // When
-        PropertyOperationUtil.disablePQueriesInRequest(query, pQueryMatchesPath("foo", "bar"));
+        disablePQueriesInRequest(query, pQueryMatchesPath("foo", "bar"));
 
         // Then
         assertNull(query.getProperties());
     }
 
     @Test
-    void shouldDisableSimpleAnd() {
+    void shouldRemoveAndWhenInnerQueriesDisabled() {
         // Given
         PAnd root = new PAnd();
         root.add(new PQuery(new Property("foo", "bar"), StringOp.EQUALS, "a"));
@@ -212,22 +146,7 @@ class PropertyOperationUtilTest {
         query.setProperties(root);
 
         // When
-        PropertyOperationUtil.disablePQueriesInRequest(query, pQueryMatchesPath("foo", "bar"));
-
-        // Then
-        assertNull(query.getProperties());
-    }
-
-    @Test
-    void shouldDisableSimpleNot() {
-        // Given
-        PNot root = new PNot();
-        root.setQuery(new PQuery(new Property("foo", "bar"), StringOp.EQUALS, "a"));
-        RequestQuery query = new RequestQuery();
-        query.setProperties(root);
-
-        // When
-        PropertyOperationUtil.disablePQueriesInRequest(query, pQueryMatchesPath("foo", "bar"));
+        disablePQueriesInRequest(query, pQueryMatchesPath("foo", "bar"));
 
         // Then
         assertNull(query.getProperties());
@@ -239,6 +158,7 @@ class PropertyOperationUtilTest {
         PQuery a = new PQuery(new Property("a"), StringOp.EQUALS, "1");
         PQuery b = new PQuery(new Property("b"), StringOp.EQUALS, "2");
 
+        // And
         RequestQuery query = new RequestQuery();
         query.setProperties(new PAnd(a, b));
 
@@ -247,7 +167,15 @@ class PropertyOperationUtilTest {
 
         // Then
         assertEquals(Set.of(a), disabled);
-        assertEquals(b, query.getProperties());
+
+        // And
+        IPropertyQuery newRoot = query.getProperties();
+        assertNotNull(newRoot);
+        PAnd pAnd = assertInstanceOf(PAnd.class, newRoot);
+
+        // And
+        assertEquals(1, pAnd.size());
+        assertEquals(b, pAnd.getFirst());
     }
 
     @Test
@@ -256,6 +184,7 @@ class PropertyOperationUtilTest {
         PQuery a = new PQuery(new Property("a"), StringOp.EQUALS, "1");
         PQuery b = new PQuery(new Property("b"), StringOp.EQUALS, "2");
 
+        // And
         RequestQuery query = new RequestQuery();
         query.setProperties(new POr(a, b));
 
@@ -264,37 +193,15 @@ class PropertyOperationUtilTest {
 
         // Then
         assertEquals(Set.of(a), disabled);
-        assertEquals(b, query.getProperties());
-    }
 
-    @Test
-    void shouldReduceAndToFalseWhenFalseRemains() {
-        // Given
-        PQuery a = new PQuery(new Property("a"), StringOp.EQUALS, "1");
+        // And
+        IPropertyQuery newRoot = query.getProperties();
+        assertNotNull(newRoot);
+        POr pOr = assertInstanceOf(POr.class, newRoot);
 
-        RequestQuery query = new RequestQuery();
-        query.setProperties(new PAnd(a, PFalse.INSTANCE));
-
-        // When
-        disablePQueriesInRequest(query, pQueryMatchesPath("a"));
-
-        // Then
-        assertEquals(PFalse.INSTANCE, query.getProperties());
-    }
-
-    @Test
-    void shouldReduceOrToTrueWhenTrueRemains() {
-        // Given
-        PQuery a = new PQuery(new Property("a"), StringOp.EQUALS, "1");
-
-        RequestQuery query = new RequestQuery();
-        query.setProperties(new POr(a, PTrue.INSTANCE));
-
-        // When
-        disablePQueriesInRequest(query, pQueryMatchesPath("a"));
-
-        // Then
-        assertNull(query.getProperties());
+        // And
+        assertEquals(1, pOr.size());
+        assertEquals(b, pOr.getFirst());
     }
 
     @Test
@@ -303,6 +210,7 @@ class PropertyOperationUtilTest {
         PQuery inner = new PQuery(new Property("a"), StringOp.EQUALS, "1");
         PNot root = new PNot(inner);
 
+        // And
         RequestQuery query = new RequestQuery();
         query.setProperties(root);
 
@@ -312,52 +220,6 @@ class PropertyOperationUtilTest {
         // Then
         assertEquals(Set.of(inner), disabled);
         assertNull(query.getProperties());
-    }
-
-    @Test
-    void shouldHandleNotAndWithOneDisabledChild() {
-        // Given
-        PQuery a = new PQuery(new Property("a"), StringOp.EQUALS, "1");
-        PQuery b = new PQuery(new Property("b"), StringOp.EQUALS, "2");
-
-        RequestQuery query = new RequestQuery();
-        query.setProperties(new PNot(new PAnd(a, b)));
-
-        // When
-        Set<PQuery> disabled = disablePQueriesInRequest(query, pQueryMatchesPath("a"));
-
-        // Then
-        assertEquals(Set.of(a), disabled);
-        IPropertyQuery result = query.getProperties();
-        assertInstanceOf(PNot.class, result);
-        assertEquals(b, ((PNot) result).getQuery());
-    }
-
-    @Test
-    void shouldCollapseNestedAndOrCorrectly() {
-        // Given
-        PQuery a = new PQuery(new Property("a"), StringOp.EQUALS, "1");
-        PQuery b = new PQuery(new Property("b"), StringOp.EQUALS, "2");
-        PQuery c = new PQuery(new Property("c"), StringOp.EQUALS, "3");
-
-        RequestQuery query = new RequestQuery();
-        query.setProperties(new PAnd(
-            new POr(a, b),
-            c
-        ));
-
-        // When
-        Set<PQuery> disabled = disablePQueriesInRequest(query, pQueryMatchesPath("a"));
-
-        // Then
-        assertEquals(Set.of(a), disabled);
-
-        IPropertyQuery result = query.getProperties();
-        assertInstanceOf(PAnd.class, result);
-        PAnd and = (PAnd) result;
-
-        assertEquals(2, and.size());
-        assertInstanceOf(PQuery.class, and.get(1));
     }
 
     @Test
@@ -376,63 +238,6 @@ class PropertyOperationUtilTest {
         assertTrue(disabled.contains(a));
     }
 
-    @ParameterizedTest
-    @MethodSource("andTruthTable")
-    void truthTable_and(IPropertyQuery left, IPropertyQuery right, IPropertyQuery expected) {
-        RequestQuery query = new RequestQuery();
-        query.setProperties(new PAnd(left, right));
-
-        disablePQueriesInRequest(query, pq -> true);
-
-        assertEquals(expected, query.getProperties());
-    }
-
-    @ParameterizedTest
-    @MethodSource("orTruthTable")
-    void truthTable_or(IPropertyQuery left, IPropertyQuery right, IPropertyQuery expected) {
-        RequestQuery query = new RequestQuery();
-        query.setProperties(new POr(left, right));
-
-        disablePQueriesInRequest(query, pq -> true);
-
-        assertEquals(expected, query.getProperties());
-    }
-
-    @ParameterizedTest
-    @MethodSource("notTruthTable")
-    void truthTable_not(IPropertyQuery inner, IPropertyQuery expected) {
-        RequestQuery query = new RequestQuery();
-        query.setProperties(new PNot(inner));
-
-        disablePQueriesInRequest(query, pq -> true);
-
-        assertEquals(expected, query.getProperties());
-    }
-
-    private static Stream<Object[]> notTruthTable() {
-        return Stream.of(
-            new Object[]{PTrue.INSTANCE,  PFalse.INSTANCE},
-            new Object[]{PFalse.INSTANCE, null}
-        );
-    }
-
-    private static Stream<Object[]> andTruthTable() {
-        return Stream.of(
-            new Object[]{PTrue.INSTANCE,  PTrue.INSTANCE,  null},
-            new Object[]{PTrue.INSTANCE,  PFalse.INSTANCE, PFalse.INSTANCE},
-            new Object[]{PFalse.INSTANCE, PTrue.INSTANCE,  PFalse.INSTANCE},
-            new Object[]{PFalse.INSTANCE, PFalse.INSTANCE, PFalse.INSTANCE}
-        );
-    }
-
-    private static Stream<Object[]> orTruthTable() {
-        return Stream.of(
-            new Object[]{PTrue.INSTANCE,  PTrue.INSTANCE,  null},
-            new Object[]{PTrue.INSTANCE,  PFalse.INSTANCE, null},
-            new Object[]{PFalse.INSTANCE, PTrue.INSTANCE,  null},
-            new Object[]{PFalse.INSTANCE, PFalse.INSTANCE, PFalse.INSTANCE}
-        );
-    }
     private F1<Boolean, PQuery> pQueryMatchesPath(String... expectedPath) {
         return pQuery -> {
             StringList queryPath = pQuery.getProperty().getPath();
